<?xml version="1.0"?>
<package>
  <name>matlab_joint_commander</name>
  <version>0.0.0</version>
  <description>Quick package to send joint positions to Baxter (display only or actual execution) from Matlab</description>
  <maintainer email="yoan@todo.todo">yoan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
